[project]
name = "deforum-comfy-nodes"
description = "Official Deforum animation pipeline tools that provide a unique way to create frame-by-frame generative motion art."
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-contrib-python", "timm==0.6.5", "PyWavelets", "opensimplex", "matplotlib", "pandas<=1.5.1", "numexpr", "rich", "imageio[ffmpeg]", "scikit-image", "moviepy", "librosa", "pydub", "git+https://github.com/XmYx/deforum-studio.git"]

[project.urls]
Repository = "https://github.com/XmYx/deforum-comfy-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "deforum-comfy-nodes"
Icon = ""